# siren-music-download

./: .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  README.md  UI_DESIGN.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.eslint.json  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/actions/install-linux-system-dependencies/: action.yml
.github/workflows/: ci.yml  distribute.yml
crates/siren-core/: Cargo.toml
crates/siren-core/src/: api.rs  audio.rs  downloader.rs  homepage.rs  lib.rs
crates/siren-core/src/download/: error.rs  mod.rs  model.rs  planner.rs  service.rs  worker.rs
crates/siren-core/src/local_inventory/: mod.rs
crates/siren-core/src/search/: mod.rs
doc/: APP_SVELTE_SPLIT_PLAN_B.md  BACKEND_API_CONTRACT.md  BACKEND_API_PLAN.md  BACKEND_API_PRD.md  BACKEND_COMPLETED_PHASES.md  BACKEND_PENDING_PHASES.md  BACKEND_ROADMAP.md  BUN_MIGRATION_PLAN.md  DECISIONS.md  FRONTEND_GUIDE.md  RELEASE_PROCESS.md  REVIEW_RULES.md  UI_REFACTOR_OPTIMIZATION.md
doc/guides/: claude-code-hook-setup.md  frontend-guide.md  i18n-inventory.md
docs/superpowers/plans/: 2026-04-29-font-strategy.md  2026-04-29-homepage.md
docs/superpowers/specs/: 2026-04-29-font-strategy-design.md
messages/: en-US.json  zh-CN.json
scripts/claude-hooks/: rust-fmt-lib.mjs  rust-fmt-pre-commit-wrapper.mjs  rust-fmt-pre-commit.mjs  rust-fmt-stop-warning-wrapper.mjs  rust-fmt-stop-warning.mjs
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/locales/en-US/: main.ftl
src-tauri/locales/zh-CN/: main.ftl
src-tauri/src/: album_metadata_cache.rs  app_state.rs  audio_cache.rs  download_session.rs  lib.rs  listening_history.rs  local_inventory.rs  logging.rs  main.rs  preferences.rs  theme.rs
src-tauri/src/commands/: downloads.rs  library.rs  local_inventory.rs  logging.rs  mod.rs  playback.rs  preferences.rs  search.rs
src-tauri/src/downloads/: bridge.rs  events.rs  mod.rs
src-tauri/src/i18n/: mod.rs
src-tauri/src/notification/: cover.rs  desktop.rs  macos.rs  mod.rs
src-tauri/src/player/: controller.rs  decode.rs  events.rs  media.rs  mod.rs  state.rs  stream.rs
src-tauri/src/player/backend/: coreaudio.rs  cpal.rs  mod.rs
src-tauri/src/search/: index.rs  mod.rs  service.rs  snapshot.rs
src/lib/: api.ts  cache.ts  downloadBadge.ts  lazyLoad.ts  settingsApi.ts  theme.ts  types.ts  utils.ts
src/lib/actions/: motionStyles.ts
src/lib/components/: AlbumCard.svelte  AudioPlayer.svelte  MotionPulseBlock.svelte  MotionSpinner.svelte  SongRow.svelte
src/lib/components/app/: AlbumDetailPanel.svelte  AlbumDetailSkeleton.svelte  AlbumSidebar.svelte  AlbumSidebarContainer.svelte  AlbumStage.svelte  AlbumWorkspace.svelte  AlbumWorkspaceContent.svelte  AppSideSheets.svelte  DownloadTasksSheet.svelte  HomeLatestAlbums.svelte  HomeRecentHistory.svelte  HomeSeriesGroups.svelte  HomeStatusDashboard.svelte  HomeView.svelte  PlayerDock.svelte  PlayerFlyoutStack.svelte  SettingsSheet.svelte  StatusToastHost.svelte  TopToolbar.svelte
src/lib/components/ui/alert-dialog/: alert-dialog-action.svelte  alert-dialog-cancel.svelte  alert-dialog-content.svelte  alert-dialog-description.svelte  alert-dialog-footer.svelte  alert-dialog-media.svelte  alert-dialog-overlay.svelte
src/lib/components/ui/badge/: badge.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/dialog/: dialog-close.svelte  dialog-content.svelte  dialog-overlay.svelte  dialog-trigger.svelte
src/lib/components/ui/input/: input.svelte
src/lib/components/ui/select/: select-content.svelte  (+2 more)
src/lib/design/: tokens.ts  variants.ts
src/lib/features/download/: controller.svelte.ts  formatters.ts  guards.ts  store.svelte.ts
src/lib/features/env/: store.svelte.ts
src/lib/features/home/: controller.svelte.ts  store.svelte.ts
src/lib/features/player/: controller.svelte.ts  lyrics.ts  queue.ts  store.svelte.ts
src/lib/features/shell/: albumStageMotion.svelte.ts  settings.svelte.ts  store.svelte.ts
src/lib/styles/: fonts.css
(+9 files in other folders)
