[package]
name = "siren-music-download"
version = "0.1.0"
edition = "2021"
description = "Cross-platform lossless music downloader for Monster Siren Records"
license = "MIT"

[[bin]]
name = "siren-music-download"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
dirs = "5"
cpal = "0.17"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
md5 = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
siren_core = { path = "../crates/siren-core" }
souvlaki = "0.8"
symphonia = { version = "0.5.5", features = ["flac", "mp3", "wav"] }
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
notify-rust = "4.15"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
time = { version = "0.3", features = ["formatting"] }
walkdir = "2"
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
