[package]
name = "siren_core"
version = "0.1.0"
edition = "2021"
description = "Shared core library for Siren Music Download"
license = "MIT"

[lib]
name = "siren_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
flacenc = "0.5"
futures = "0.3"
hound = "3"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
md5 = "0.7"
metaflac = "0.2"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
lru = "0.12"

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
